--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,11 +11,7 @@
         android:theme="@style/AppTheme">
 
         <activity android:name=".LoginPage">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity android:name=".LectureList" />
         <activity android:name=".ChapterName" />
@@ -27,6 +23,14 @@
         <activity android:name=".SubjectPage" />
         <activity android:name=".MainActivity">
 
+        </activity>
+        <activity android:name=".OtpActivity" />
+        <activity android:name=".LoginActivity" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
     </application>
 
