--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".FullDetailsInfo"></activity>
+        <activity android:name=".OpenMyPdf"></activity>
+        <activity android:name=".FullDetailsInfo" />
         <activity android:name=".LectureList" />
         <activity android:name=".ChapterName" />
         <activity
@@ -18,7 +19,7 @@
             android:screenOrientation="portrait" />
         <activity android:name=".ClassPage" />
         <activity android:name=".SubjectPage" />
-        <activity android:name=".MainActivity"></activity>
+        <activity android:name=".MainActivity" />
         <activity android:name=".OtpActivity" />
         <activity android:name=".LoginActivity">
             <intent-filter>
