--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".OpenMyPdf"></activity>
+        <activity android:name=".OpenMyPdf"/>
         <activity android:name=".FullDetailsInfo" />
         <activity android:name=".LectureList" />
         <activity android:name=".ChapterName" />
